fix text align

--- a/app/page.css
+++ b/app/page.css
@@ -179,7 +179,6 @@ a {
         flex-direction: column-reverse;
         align-items: center; 
         justify-content: center;
-        text-align: center;
     }
 
     .content-left, .content-right {
